Gui screens added

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,12 @@
             <artifactId>mssql-jdbc</artifactId>
             <version>12.2.0.jre8</version>
         </dependency>
-        
+        <!-- https://mvnrepository.com/artifact/com.toedter/jcalendar -->
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
